--- a/action.yml
+++ b/action.yml
@@ -37,16 +37,16 @@ runs:
       shell: bash
       run: |
         if [ -z "${{ inputs.payload }}" ]; then
-          job_run_id=$(databricks runs submit job ${{ inputs.job-id }} | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         else
-          job_run_id=$(databricks runs submit job --json ${{ inputs.payload }} ${{ inputs.job-id }} | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --notebook-params ${{ inputs.payload }} --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         fi
         echo "job_run_id=$job_run_id" >> $GITHUB_OUTPUT
 
     - name: Wait for Databricks Job to Complete
       shell: bash
       run: |
-        result=$(databricks runs wait --run-id ${{ steps.trigger.outputs.job_run_id }})
+        result=$(databricks runs get --run-id ${{ steps.trigger.outputs.job_run_id }})
         echo "Job result: $result"
         if [ "$result" = "SUCCESS" ]; then
           echo "Job succeeded"
