--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
       id: trigger
       shell: bash
       run: |
-        if [ $(echo '${{ inputs.payload }}') == '{}' ]; then
+        if [ "${{ inputs.payload }}" == '{}' ]; then
           job_run_id=$(databricks jobs run-now --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         else
           job_run_id=$(databricks jobs run-now --notebook-params '${{ inputs.payload }}' --job-id ${{ inputs.job-id }} | jq -r '.run_id')
