--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
       id: trigger
       shell: bash
       run: |
-        VARIABLE=$(echo ${{ inputs.payload }});
+        VARIABLE=$(echo '${{ inputs.payload }}');
         if [ "$VARIABLE" == '{}' ]; then
           job_run_id=$(databricks jobs run-now --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         else
