--- a/action.yml
+++ b/action.yml
@@ -39,11 +39,11 @@ runs:
       id: trigger
       shell: bash
       run: |
-        echo "Generating Job ID"
-        if [ $(echo '${{ inputs.payload }}' | jq tostring) == '{}' ]; then
+        PAYLOAD = $(echo '${{ inputs.payload }}' | jq tostring)
+        if [ $(echo $PAYLOAD | jq tostring) == '{}' ]; then
           job_run_id=$(databricks jobs run-now --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         else
-          job_run_id=$(databricks jobs run-now --notebook-params $(echo '${{ inputs.payload }}' | jq tostring) --job-id ${{ inputs.job-id }} | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --notebook-params $PAYLOAD --job-id ${{ inputs.job-id }} | jq -r '.run_id')
         fi
         echo "job_run_id=$job_run_id" >> $GITHUB_OUTPUT
 
