--- a/action.yml
+++ b/action.yml
@@ -40,17 +40,22 @@ runs:
       shell: bash
       run: |
         if [ $(echo '${{ inputs.payload }}' | jq tostring) == '{}' ]; then
-          job_run_id=$(databricks jobs run-now --job-id='${{ inputs.job-id }}' | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --job-id=$(echo ${{ inputs.job-id }} | jq -c .) | jq -r '.run_id')
         else
           PARAMS=$(echo '${{ inputs.payload }}' | jq -c .)
-          job_run_id=$(databricks jobs run-now --notebook-params=$PARAMS --job-id='${{ inputs.job-id }}' | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --notebook-params=$PARAMS --job-id=$(echo ${{ inputs.job-id }} | jq -c .) | jq -r '.run_id')
         fi
         echo "job_run_id=$job_run_id" >> $GITHUB_OUTPUT
 
     - name: Wait for Databricks Job to Complete
       shell: bash
       run: |
-        result=$(databricks runs get --run-id ${{ steps.trigger.outputs.job_run_id }})
+        status=$(databricks runs get --run-id ${{ steps.trigger.outputs.job_run_id }} | jq -r '.state.life_cycle_state')
+        while [ "$status" == "RUNNING" ]; do
+          status=$(databricks runs get --run-id ${{ steps.trigger.outputs.job_run_id }} | jq -r '.state.life_cycle_state')
+          sleep 10
+        done
+        result=$(databricks runs get --run-id ${{ steps.trigger.outputs.job_run_id }} | jq -r '.state.result_state')
         echo "Job result: $result"
         if [ "$result" = "SUCCESS" ]; then
           echo "Job succeeded"
