--- a/action.yml
+++ b/action.yml
@@ -40,12 +40,11 @@ runs:
       shell: bash
       run: |
         if [ $(echo '${{ inputs.payload }}' | jq tostring) == '{}' ]; then
-          job_run_id=$(databricks jobs run-now --job-id=${{ inputs.job-id }} | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --job-id='${{ inputs.job-id }}' | jq -r '.run_id')
         else
-          job_run_id=$(databricks jobs run-now --notebook-params=$(echo '${{ inputs.payload }}' | jq -c .) --job-id=${{ inputs.job-id }} | jq -r '.run_id')
+          job_run_id=$(databricks jobs run-now --notebook-params=$(echo '${{ inputs.payload }}' | jq -c .) --job-id='${{ inputs.job-id }}' | jq -r '.run_id')
         fi
         echo "job_run_id=$job_run_id" >> $GITHUB_OUTPUT
-
     - name: Wait for Databricks Job to Complete
       shell: bash
       run: |
