--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
 
     - name: Install zsh
       shell: bash
-      run: sudo apt-get update; sudo apt-get install zsh
+      run: sudo apt-get update; sudo apt-get install -y zsh 
 
     - name: Run Databricks Job
       id: trigger
