--- a/action.yml
+++ b/action.yml
@@ -61,8 +61,10 @@ runs:
         DATABRICKS_TOKEN: ${{ inputs.token }}
       run: |
         status_run=$(databricks runs get --run-id ${{ steps.trigger.outputs.run_id }} | jq -r '.state.life_cycle_state')
+        echo "Job status: $status_run"
         while [ "$status_run" == "RUNNING" ]; do
           status_run=$(databricks runs get --run-id ${{ steps.trigger.outputs.run_id }} | jq -r '.state.life_cycle_state')
+          echo "Job status: $status_run"
           sleep 10
         done
         result_run=$(databricks runs get --run-id ${{ steps.trigger.outputs.run_id }} | jq -r '.state.result_state')
